--- a/src/app/app.part.html
+++ b/src/app/app.part.html
@@ -1,6 +1,6 @@
 <ion-pane>
-  <ion-header-bar class="bar-energized">
-    <h1 class="title">send a message</h1>
+  <ion-header-bar>
+    <h1 class="title">GhostWording Mobile Prototype</h1>
   </ion-header-bar>
   <ion-content>
     <ng-include src="'app/text/textlist/textlist.part.html'"></ng-include>
