--- a/src/app/text/textlist/textlist.css
+++ b/src/app/text/textlist/textlist.css
@@ -1,9 +1,17 @@
+.textList {
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
 .textListItem {
   left: 0;
   right: 0;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  margin-left: 15px;
+  margin-right: 20px;
 }
 .filter {
-  background-color: #cccccc;
+  background-color: #aaaaaa;
 }
 .item-select select {
   background: transparent;
