--- a/src/app/app.part.html
+++ b/src/app/app.part.html
@@ -1,8 +1,6 @@
-<ion-pane>
-  <ion-header-bar>
-    <h1 class="title">GhostWording Mobile Prototype</h1>
-  </ion-header-bar>
-  <ion-content>
-    <ng-include src="'app/text/textlist/textlist.part.html'"></ng-include>
-  </ion-content>
-</ion-pane>
+<div>
+  <ion-nav-bar class="nav-title-slide-ios7 bar-positive">
+    <ion-nav-back-button class="button-icon ion-arrow-left-c"></ion-nav-back-button>
+  </ion-nav-bar>
+  <ion-nav-view class="appView" animation="slide-left-right"></ion-nav-view>
+</div>
