--- a/src/app/app.part.html
+++ b/src/app/app.part.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-controller="AppCtrl">
   <ion-nav-bar class="nav-title-slide-ios7 bar-positive">
     <ion-nav-back-button class="button-icon ion-arrow-left-c"></ion-nav-back-button>
   </ion-nav-bar>
