feat(*): persist email and mobile number (faked for now due to inability to get the cordova AppPreferences plugin to work) - closes #10

--- a/src/app/home/home.part.html
+++ b/src/app/home/home.part.html
@@ -5,11 +5,11 @@
   <div class="list">
     <label class="item item-input">
       <span class="input-label">Mums Mobile No</span>
-      <input type="tel" ng-model="mobile" ng-blur="mobileBlur()">
+      <input type="tel" ng-model="mobile" ng-change="mobileChange()">
     </label>
     <label class="item item-input">
       <span class="input-label">Mums Email Address</span>
-      <input type="email" ng-model="email" ng-blur="emailBlur()">
+      <input type="email" ng-model="email" ng-change="emailChange()">
     </label>
   </div>
   <a href="#/intentions">
