--- a/src/app/intentions/intentions.part.html
+++ b/src/app/intentions/intentions.part.html
@@ -1,4 +1,5 @@
-<div class="intentionList">
+<div class="intentionList" ng-controller="IntentionsCtrl">
+  <pre>{{intentions | json}}</pre>
   <a href="#/texts"><div class="intentionListItem">I think of you</div></a>
   <a href="#/texts"><div class="intentionListItem">Thank you</div></a>
   <a href="#/texts"><div class="intentionListItem">Come for dinner</div></a>
