--- a/src/app/textlist/textlist.css
+++ b/src/app/textlist/textlist.css
@@ -8,15 +8,16 @@
 .textListItem {
   color: #333333; 
   margin-bottom: 5px;
+  background-color: #f2f2f2;
   padding: 20px;
-  background-color: #fff0ff;
 }
 .textListItemExpanded {
   color: #222222; 
   margin-bottom: 0px;
-  background-color: #ffe0ff;
+  background-color: #fce5fc;
 }
 .textListButtonBar {
+  margin-bottom: 10px;
 }
 .textListItemButton {
   border: none;
