--- a/src/app/app.part.html
+++ b/src/app/app.part.html
@@ -1,3 +1,3 @@
 <div ng-controller="AppCtrl">
-  <ion-nav-view class="appView" animation="slide-left-right"></ion-nav-view>
+  <ion-nav-view class="appView" animation="no-animation"></ion-nav-view>
 </div>
