fix(textlist): use correct intention in textlist - fixes #7

--- a/src/app/intentions/intentions.part.html
+++ b/src/app/intentions/intentions.part.html
@@ -1,6 +1,6 @@
 <div class="intentionList" ng-controller="IntentionsCtrl">
-  <a href="#/texts"><div class="intentionListItem">I think of you</div></a>
-  <a href="#/texts"><div class="intentionListItem">Thank you</div></a>
-  <a href="#/texts"><div class="intentionListItem">Come for dinner</div></a>
-  <a href="#/texts"><div class="intentionListItem">Happy Birthday</div></a>
+  <a href="#/texts/i-think-of-you"><div class="intentionListItem">I'm thinking of you</div></a>
+  <a href="#/texts/thank-you"><div class="intentionListItem">Thank you</div></a>
+  <a href="#/texts/come-over-for-dinner"><div class="intentionListItem">Come for dinner</div></a>
+  <a href="#/texts/happy-birthday"><div class="intentionListItem">Happy Birthday</div></a>
 </div>
