--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -11,6 +11,9 @@
     <feature name="Sms">
         <param name="android-package" value="org.apache.cordova.plugin.sms.Sms" />
     </feature>
+    <feature name="EmailComposer">
+        <param name="android-package" value="de.appplant.cordova.emailcomposer.EmailComposer" />
+    </feature>
     <name>Hello Mum</name>
     <description>
     GhostWording Hello Mum Mobile App
