--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -1,18 +1,17 @@
-<div class="textList">
-  <div ng-repeat="text in filteredTexts">
-    <div ng-class="{textListItem:true, textListItemExpanded:textSelected(text)}" ng-click="selectText(text)">
-      {{text.Content}}
-    </div>
-    <div class="button-bar textListButtonBar" ng-if="textSelected(text)">
-      <button class="button textListItemButton textListItemButtonSendViaEmail" ng-click="sendViaEmail(text)">
-        <span class="icon ion-email"></span>
-      </button>
-      <button class="button textListItemButton textListItemButtonSendViaSMS" ng-click="sendViaSMS(text)">
-        <span class="icon ion-ios7-chatboxes"></span>
-      </button>
-      <button class="button textListItemButton textListItemButtonSendViaFacebook" ng-click="sendViaFacebook(text)">
-        <span class="icon ion-social-facebook"></span>
-      </button>
-    </div>
+<div class="textSelect">
+  <img src="http://placekitten.com/g/200/300"/>
+  <div class="textSelectContent" ng-click="nextText()">
+    {{currentText.Content}}
+  </div>
+  <div class="button-bar sendBar">
+    <button class="button sendBarButton sendBarButtonSendViaEmail" ng-click="sendViaEmail(currentText)">
+      <span class="icon ion-email"></span>
+    </button>
+    <button class="button sendBarButton sendBarButtonSendViaSMS" ng-click="sendViaSMS(currentText)">
+      <span class="icon ion-ios7-chatboxes"></span>
+    </button>
+    <button class="button sendBarButton sendBarButtonSendViaFacebook" ng-click="sendViaFacebook(currentText)">
+      <span class="icon ion-social-facebook"></span>
+    </button>
   </div>
 </div>
