feat(home): switch to texts screen on ok

--- a/src/app/home/home.part.html
+++ b/src/app/home/home.part.html
@@ -12,7 +12,7 @@
       <input type="email" ng-model="email" ng-change="emailChange()">
     </label>
   </div>
-  <a href="#/intentions">
+  <a href="#/texts">
     <button class="button button-light">
       Ok
     </button>
