--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -9,20 +9,20 @@
   </div>
   <!-- text slider -->
   <div class="textSelectContentSlider">
-    <ion-slide-box show-pager="false">
+    <ion-slide-box show-pager="false" active-slide="currentText">
       <ion-slide ng-repeat="text in filteredTexts | temporaryFilterLongTexts">
         <div class="textSelectContent">
           {{text.Content}}
         </div>
         <!-- send button bar -->
         <div class="button-bar sendBar">
-          <button class="button sendBarButton sendBarButtonSendViaEmail" ng-click="sendViaEmail(currentText)">
+          <button class="button sendBarButton sendBarButtonSendViaEmail" ng-click="sendViaEmail(text, getCurrentImageUrl())">
             <span class="icon ion-email"></span>
           </button>
-          <button class="button sendBarButton sendBarButtonSendViaSMS" ng-click="sendViaSMS(currentText)">
+          <button class="button sendBarButton sendBarButtonSendViaSMS" ng-click="sendViaSMS(text)">
             <span class="icon ion-ios7-chatboxes"></span>
           </button>
-          <button class="button sendBarButton sendBarButtonSendViaFacebook" ng-click="sendViaFacebook(currentText)">
+          <button class="button sendBarButton sendBarButtonSendViaFacebook" ng-click="sendViaFacebook(text)">
             <span class="icon ion-social-facebook"></span>
           </button>
         </div>
