feat(textselect): include image link in send via SMS

--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -19,7 +19,7 @@
           <button class="button sendBarButton sendBarButtonSendViaEmail" ng-click="sendViaEmail(text, getCurrentImageUrl())">
             <span class="icon ion-email"></span>
           </button>
-          <button class="button sendBarButton sendBarButtonSendViaSMS" ng-click="sendViaSMS(text)">
+          <button class="button sendBarButton sendBarButtonSendViaSMS" ng-click="sendViaSMS(text, getCurrentImageUrl())">
             <span class="icon ion-ios7-chatboxes"></span>
           </button>
           <button class="button sendBarButton sendBarButtonSendViaFacebook" ng-click="sendViaFacebook(text)">
