--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -2,18 +2,15 @@
   margin-top: 0px;
   height: 90%;
 }
-.textSelectImageSlider {
-  height: 50%;
+.textSelectSlider {
+  margin-top: 5px;
+  height: 100%;
 }
-.textSelectImageSlider .slider {
+.textSelectSlider .slider {
   height: 100%;
 }
 .textSelectImage {
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  border-radius: 30px;
-  height: 100%;
+  height: 50%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -21,11 +18,7 @@
   background-repeat: no-repeat; 
   background-position: center center;
   background-attachment: fixed fixed; 
-  margin-bottom: 30px;
-}
-.textSelectContentSlider {
-  margin-top: 5px;
-  margin-bottom: 10px; 
+  margin-bottom: 5px;
 }
 .textSelectContent {
   color: rgba(0,0,0,0.7); 
@@ -36,23 +29,6 @@
   margin-right: 10px;
   box-shadow: 10px 10px 20px rgba(0,0,0,0.2);
 } 
-/*
-.textSelect a {
-  text-decoration: none; 
-  color: black;
-} 
-.textListItem {
-  color: #333333; 
-  margin-bottom: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-}
-.textListItemExpanded {
-  color: #222222; 
-  margin-bottom: 0px;
-  background-color: #fce5fc;
-}
-*/
 .sendBar {
   margin-top: 5px;
   margin-bottom: 10px;
