--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -3,10 +3,15 @@
   height: 90%;
 }
 .textSelectSlider {
-  margin-top: 5px;
   height: 100%;
 }
 .textSelectSlider .slider {
+  height: 100%;
+}
+.textSelectSliderContent {
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
   height: 100%;
 }
 .textSelectImage {
@@ -18,15 +23,16 @@
   background-repeat: no-repeat; 
   background-position: center center;
   background-attachment: fixed fixed; 
-  margin-bottom: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 .textSelectContent {
   color: rgba(0,0,0,0.7); 
   background-color: rgba(255,255,255,0.8);
+  margin-top: 2px;
   padding: 20px;
-  border-radius: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
   box-shadow: 10px 10px 20px rgba(0,0,0,0.2);
 } 
 .sendBar {
