--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -3,22 +3,24 @@
   <div class="textSelectSlider">
     <ion-slide-box show-pager="false" active-slide="currentText">
       <ion-slide ng-repeat="text in filteredTexts | temporaryFilterLongTexts">
-        <!-- image -->
-        <div class="textSelectImage" style="background-image:url('{{imageUrls[$index % imageUrls.length]}}')"></div>
-        <div class="textSelectContent">
-          {{text.Content}}
-        </div>
-        <!-- send button bar -->
-        <div class="button-bar sendBar">
-          <button class="button sendBarButton sendBarButtonSendViaEmail" ng-click="sendViaEmail(text, getCurrentImageUrl())">
-            <span class="icon ion-email"></span>
-          </button>
-          <button class="button sendBarButton sendBarButtonSendViaSMS" ng-click="sendViaSMS(text, getCurrentImageUrl())">
-            <span class="icon ion-ios7-chatboxes"></span>
-          </button>
-          <button class="button sendBarButton sendBarButtonSendViaFacebook" ng-click="sendViaFacebook(text)">
-            <span class="icon ion-social-facebook"></span>
-          </button>
+        <div class="textSelectSliderContent">
+          <!-- image -->
+          <div class="textSelectImage" style="background-image:url('{{imageUrls[$index % imageUrls.length]}}')"></div>
+          <div class="textSelectContent">
+            {{text.Content}}
+          </div>
+          <!-- send button bar -->
+          <div class="button-bar sendBar">
+            <button class="button sendBarButton sendBarButtonSendViaEmail" ng-click="sendViaEmail(text, getCurrentImageUrl())">
+              <span class="icon ion-email"></span>
+            </button>
+            <button class="button sendBarButton sendBarButtonSendViaSMS" ng-click="sendViaSMS(text, getCurrentImageUrl())">
+              <span class="icon ion-ios7-chatboxes"></span>
+            </button>
+            <button class="button sendBarButton sendBarButtonSendViaFacebook" ng-click="sendViaFacebook(text)">
+              <span class="icon ion-social-facebook"></span>
+            </button>
+          </div>
         </div>
       </ion-slide>
     </ion-slide-box>
