--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -4,28 +4,29 @@
     <ion-slide-box show-pager="false" active-slide="currentText">
       <ion-slide ng-repeat="text in filteredTexts | temporaryFilterLongTexts">
         <div class="textSelectSliderContent">
-          <!-- nav bar -->
-          <div class="textSelectNavBar"></div>
           <!-- image -->
           <div class="textSelectImage" style="background-image:url('{{imageUrls[$index % imageUrls.length]}}')"></div>
           <!-- content -->
-          <div class="textSelectContent">
+          <div class="textSelectText">
             {{text.Content}}
           </div>
-          <!-- send button bar -->
-          <div class="button-bar sendBar">
-            <button class="button sendBarButton sendBarButtonSendViaEmail" ng-click="sendViaEmail(text, getCurrentImageUrl())">
-              <span class="icon ion-email"></span>
-            </button>
-            <button class="button sendBarButton sendBarButtonSendViaSMS" ng-click="sendViaSMS(text, getCurrentImageUrl())">
-              <span class="icon ion-ios7-chatboxes"></span>
-            </button>
-            <button class="button sendBarButton sendBarButtonSendViaFacebook" ng-click="sendViaFacebook(text)">
-              <span class="icon ion-social-facebook"></span>
-            </button>
-          </div>
+          <div class="textSelectSendButton">SEND!</div>
         </div>
       </ion-slide>
     </ion-slide-box>
   </div>
+  <!-- send button bar -->
+  <!--
+  <div class="button-bar sendBar">
+    <button class="button sendBarButton sendBarButtonSendViaEmail" ng-click="sendViaEmail(text, getCurrentImageUrl())">
+      <span class="icon ion-email"></span>
+    </button>
+    <button class="button sendBarButton sendBarButtonSendViaSMS" ng-click="sendViaSMS(text, getCurrentImageUrl())">
+      <span class="icon ion-ios7-chatboxes"></span>
+    </button>
+    <button class="button sendBarButton sendBarButtonSendViaFacebook" ng-click="sendViaFacebook(text)">
+      <span class="icon ion-social-facebook"></span>
+    </button>
+  </div>
+  -->
 </div>
