--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -1,9 +1,9 @@
 <div class="textSelect">
   <!-- nav buttons -->
   <div class="navButtons">
-    <div class="previousStarredTextButton icon ion-ios7-arrow-left" on-tap="previousStarredText()"></div>
-    <div class="nextTextButton icon ion-ios7-arrow-right" on-tap="nextText()"></div>
-    <div class="starTextButton icon ion-ios7-star" on-tap="starText()"></div>
+    <div class="previousStarredSlideButton icon ion-ios7-arrow-left" ng-if="previousStarredSlideExists()" on-touch="previousStarredSlide()"></div>
+    <div class="nextSlideButton icon ion-ios7-arrow-right" on-touch="nextSlide()"></div>
+    <div class="starSlideButton icon ion-ios7-star" ng-class="{'starSlideButtonStarred': getCurrentSlide().starred}" on-touch="toggleSlideStar()"></div>
   </div>
   <!-- slider -->
   <div class="textSelectSlider" style="width:{{windowWidth}}px; height:{{windowHeight+500}}px" ng-mousemove="mouseMove($event)">
